# basic-python-emails-sending-automation

./: .gitignore  README.md  app.py  email_template.html  employees.csv  pyproject.toml
